# otus_cpp_ci_cd

./: CMakeLists.txt  main.cpp  test_version.cpp
.github/workflows/: release.yml
